# kedra_scraper_challenge

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml  scrapy.cfg
dagster_repo/: __init__.py  assets.py  definitions.py  partitions.py  resources.py  schedules.py  scrapy.cfg
dagster_repo/assets/: scraper_assets.py
docker/: .env.dagster  Dockerfile_wpr  docker-compose.infra.yml  docker-compose.yml
docker/dagster/: workspace.yaml
docker/wpr/: Dockerfile
src/: settings.py
src/wpr/: items.py  settings.py
src/wpr/pipelines/: file_storage.py  mongo.py
src/wpr/spiders/: decisions.py
src/wpr/utils/: scraping.py
