[project]
name = "kedra-scraper-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scrapy>=2.13.3",
    "python-dotenv>=1.0.0",
    "boto3>=1.26.0",
    "pymongo>=4.0.0",
    "dotenv>=0.9.9",
    "dagster>=1.11.5",
    "dagster-webserver>=1.11.5",
    "bs4>=0.0.2",
]
